--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+	<body>
 <div class="container-header">
     <div class="new-record">New<br>Record</div>
     <div class="prev-record">Previous<br>Record</div>
@@ -65,6 +67,7 @@
     </div>
 
 </div>
+	</body>
 
 <style>
 
@@ -156,3 +159,4 @@ body{
     font-size: small;
 }
 </style>
+</html>
